# call-laura

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-BSL  LICENSE-LGPL  README.md  fly.toml
laura-api/: Cargo.toml  README.md
laura-api/src/: main.rs
laura-core/: Cargo.toml  README.md
laura-core/src/: lib.rs  mcp.rs  schema.rs  similarity.rs  text.rs
laura-core/src/lenses/: ecocentric.rs  eight_layer.rs  mod.rs  resonance.rs  uip_check.rs
laura-mcp/: Cargo.toml  README.md  smithery.yaml
laura-mcp/src/: main.rs
laura-team/: Cargo.toml  README.md
laura-team/src/: agents.rs  lib.rs  orchestrator.rs
