[package]
name = "lauras-api"
description = "lauras-core Fly-hosted HTTP + MCP surface — /review (free), /team (Laura's 15-agent team, key-gated), /mcp (JSON-RPC over HTTP). Also deployed at laura-api.fly.dev."
version.workspace = true
edition.workspace = true
license = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "lauras-api"
path = "src/main.rs"

[dependencies]
call-laura-core = { workspace = true }
laura-team = { path = "../laura-team", version = "0.2.0", package = "lauras-team" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
