[package]
name = "laura-mcp"
description = "call-laura stdio MCP server — review_plan tool over Laura Serna Gaviria's Human-AI Co-Evolution framework plus RFI-IRFOS's own lenses."
version.workspace = true
edition.workspace = true
license = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
laura-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
