[package]
name = "lauras-mcp"
description = "lauras-core stdio MCP server — review_plan (free) + review_team (Laura's 15-agent team) over Laura Serna Gaviria's Human-AI Co-Evolution framework plus RFI-IRFOS's own lenses."
version.workspace = true
edition.workspace = true
license = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
call-laura-core = { workspace = true }
laura-team = { path = "../laura-team", version = "0.2.0", package = "lauras-team" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
