[package]
name = "lauras-team"
description = "Laura's proprietary agent team — orchestrator + 15 deterministic expert agents (OSINT, security, legal/compliance, finance, ops, strategy, UX, data-privacy, ethics, threat-model, reliability, hiring, brand, research-method, product). BSL-1.1 source-available, commercial use requires a license from RFI-IRFOS."
version.workspace = true
edition.workspace = true
license = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
call-laura-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
